Fixed banner ratios on smaller screens like mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -244,16 +244,16 @@ img.bannerImg {
 	height: 100%;
 }
 img.ratio16-9 {
-	min-height: 56.25vw;
+	height: 56.25vw;
 }
 img.ratio16-7 {
-	min-height: 43.75vw;
+	height: 43.75vw;
 }
 img.ratio16-6 {
-	min-height: 37.50vw;
+	height: 37.50vw;
 }
 .bannerSmall {
-	height: calc(43.75vw - 100px);
+	height: 37.5vw;
 	overflow: hidden;
 }
 /* Overlay Text */
